modules/header/styles/ext.cx.header.less
@import "../../base/styles/grid/agora-grid";
@import "mediawiki.mixins";

.cx-header{
	transition: width 0.15s;
}

.cx-header__logo {
	.mw-ui-item;
	.mw-ui-two-thirds;
	height: 100px;
	background-image: url(../images/wikipedia-logo-landscape.png);
	background-repeat: no-repeat;
	background-position: left top;
}

.cx-header__bar {
	.mw-ui-item;
	.mw-ui-one-whole;
	border-bottom: 1px solid #ddd;
	padding-bottom: 10px;
	box-shadow: 0 4px rgba(0,0,0,0.05);
}

.cx-header__translation-center {
	.mw-ui-item;
	.mw-ui-four-sixths;

	a:before {
			content: "";
			display: inline-block;
			border: 4px solid transparent;
			border-right-color: #555;
			margin: 0 8px 0 0;
	}
}

.cx-header__infobar {
	.mw-ui-item;
	.mw-ui-one-whole;
	padding: 10px;

	&.cx-error {
		background-color: #F7D358;
	}

	&.cx-success {
		border: 1px solid #00af89;
		background-color: #fff;
	}

	border-bottom: 1px solid #ddd;
	font-size: large;

	.remove {
		@vertical-margin: 10px;
		@horizontal-margin: 15px;
		float: right;
		padding: @vertical-margin @horizontal-margin;

		.background-image-svg('../images/clear.svg', '../images/clear.png');
		background-attachment: scroll;
		background-position: 10px center;
		background-repeat: no-repeat;
		background-size: 15px;
		cursor: pointer;
		clear: both;
	}
}

.cx-header__publish {
	.mw-ui-item;
	.mw-ui-one-quarter;
	float: right;
}

.cx-header.sticky {
	.mw-ui-two-thirds;
	position:fixed;
	background: #fff;
	background: rgba(255,255,255,0.95);
	padding-top: 5px;
	padding: 5px 0 0 0;
	.cx-header__logo,
	.cx-header__user-details {
		display: none;
	}
}

